Adding frontend and nginx gateway

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,28 @@ services:
   backend:
     build: 
       context: backend/
-    ports:
-      - 1323:1323
+    expose: 
+      - "1323"
     restart: unless-stopped
     environment: 
       DB_HOST: db
     depends_on: 
       - db
+
+  # frontend (Development)
+  frontend:
+    build: 
+      context: frontend/
+      dockerfile: DockerfileDev
+    expose: 
+      - "1323"
+    restart: "unless-stopped"
+    depends_on: 
+      - db
+      - backend
+    volumes: 
+      - ./frontend:/app
+
 
   # databases
   db:
@@ -23,35 +38,16 @@ services:
     environment: 
       MYSQL_ROOT_PASSWORD: root
 
-  # Proxy manager
-  nginx_manager:
-    image: 'jc21/nginx-proxy-manager:latest'
-    restart: unless-stopped
-    ports:
-      - '80:80'
-      - '81:81'
-      - '443:443'
-    environment:
-      DB_MYSQL_HOST: "db_nginx"
-      DB_MYSQL_PORT: 3307
-      DB_MYSQL_USER: "npm"
-      DB_MYSQL_PASSWORD: "npm"
-      DB_MYSQL_NAME: "npm"
-    volumes:
-      - ./nginx/data:/data
-      - ./nginx/letsencrypt:/etc/letsencrypt
-  db_nginx:
-    image: 'jc21/mariadb-aria:latest'
-    restart: unless-stopped
-    environment:
-      MYSQL_ROOT_PASSWORD: 'npm'
-      MYSQL_DATABASE: 'npm'
-      MYSQL_USER: 'npm'
-      MYSQL_PASSWORD: 'npm'
-      MYSQL_TCP_PORT: 3307
-    expose: 
-      - "3307"
-    volumes:
-      - ./nginx/data/mysql:/var/lib/mysql
+  # Proxy gateaway
+  gateway: 
+    build:
+      context: gateway/
+    ports: 
+      - "80:80"
+      - "443:443"
+    restart: "unless-stopped"
+    volumes: 
+      - "./gateway/nginx.conf:/etc/nginx/nginx.conf:ro"
+
 
   
