--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "next": "latest",
     "nodemon": "^2.0.12",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
