--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "framer-motion": "^4.1.17",
     "next": "latest",
     "nodemon": "^2.0.12",
     "react": "^17.0.2",
