--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,8 @@ services:
       - "80:80"
       - "443:443"
     restart: "unless-stopped"
+    labels:
+      kompose.service.type: LoadBalancer
 
 
   
