--- a/kubemanifests.yaml
+++ b/kubemanifests.yaml
@@ -24,7 +24,7 @@ items:
         io.kompose.service: backend
       name: backend
     spec:
-      replicas: 5
+      replicas: 2
       selector:
         matchLabels:
           io.kompose.service: backend
@@ -138,53 +138,83 @@ items:
           restartPolicy: Always
     status: {}
 
-#### Reverse Proxy ####
-  - apiVersion: v1
-    kind: Service
+#### Ingress (Need to install NGINX Load Balancer Ingress Controller) ####
+  - apiVersion: networking.k8s.io/v1
+    kind: Ingress
     metadata:
-      labels:
-        io.kompose.service: gateway-tcp
-      name: gateway-tcp
+      name: minimal-ingress
+      annotations:
+        kubernetes.io/ingress.class: nginx
+        nginx.ingress.kubernetes.io/rewrite-target: /$2$3
     spec:
-      ports:
-        - name: "80"
-          port: 80
-          targetPort: 80
-        - name: "443"
-          port: 443
-          targetPort: 443
-      selector:
-        io.kompose.service: gateway
-      type: LoadBalancer
-    status:
-      loadBalancer: {}
+      ingressClassName: nginx
+      rules:
+      - http:
+          paths:
+          - path: /api/()(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: backend
+                port:
+                  number: 1323
+          - path: /()(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: frontend
+                port:
+                  number: 3000          
 
-  - apiVersion: apps/v1
-    kind: Deployment
-    metadata:
-      labels:
-        io.kompose.service: gateway
-      name: gateway
-    spec:
-      replicas: 3
-      selector:
-        matchLabels:
-          io.kompose.service: gateway
-      strategy: {}
-      template:
-        metadata:
-          labels:
-            io.kompose.service: gateway
-        spec:
-          containers:
-            - image: go-echo-mysql-docker_gateway
-              name: gateway
-              imagePullPolicy: Never
-              ports:
-                - containerPort: 80
-                - containerPort: 443
-              resources: {}
-          restartPolicy: Always
-    status: {}
+# #### Reverse Proxy ####
+#   - apiVersion: v1
+#     kind: Service
+#     metadata:
+#       labels:
+#         io.kompose.service: gateway-tcp
+#       name: gateway-tcp
+#     spec:
+#       ports:
+#         - name: "80"
+#           port: 80
+#           targetPort: 80
+#         - name: "443"
+#           port: 443
+#           targetPort: 443
+#       selector:
+#         io.kompose.service: gateway
+#       type: LoadBalancer
+#     status:
+#       loadBalancer: {}
+
+#   - apiVersion: apps/v1
+#     kind: Deployment
+#     metadata:
+#       labels:
+#         io.kompose.service: gateway
+#       name: gateway
+#     spec:
+#       replicas: 3
+#       selector:
+#         matchLabels:
+#           io.kompose.service: gateway
+#       strategy: {}
+#       template:
+#         metadata:
+#           labels:
+#             io.kompose.service: gateway
+#         spec:
+#           containers:
+#             - image: go-echo-mysql-docker_gateway
+#               name: gateway
+#               imagePullPolicy: Never
+#               ports:
+#                 - containerPort: 80
+#                 - containerPort: 443
+#               resources: {}
+#           restartPolicy: Always
+#     status: {}
 kind: List
 metadata: {}
+
+# ref: https://github.com/kubernetes/ingress-nginx/issues/3122
