--- a/kubemanifests.yaml
+++ b/kubemanifests.yaml
@@ -24,7 +24,7 @@ items:
         io.kompose.service: backend
       name: backend
     spec:
-      replicas: 2
+      replicas: 1
       selector:
         matchLabels:
           io.kompose.service: backend
@@ -71,7 +71,7 @@ items:
         io.kompose.service: frontend
       name: frontend
     spec:
-      replicas: 2
+      replicas: 1
       selector:
         matchLabels:
           io.kompose.service: frontend
@@ -139,6 +139,8 @@ items:
     status: {}
 
 #### Ingress (Need to install NGINX Load Balancer Ingress Controller) ####
+# ref: https://platform9.com/blog/building-a-complete-stack-ingress-controllers/
+# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.0.0/deploy/static/provider/cloud/deploy.yaml
   - apiVersion: networking.k8s.io/v1
     kind: Ingress
     metadata:
